--- a/tictactoe.css
+++ b/tictactoe.css
@@ -44,7 +44,7 @@ body {
 button {
     float: left;
     color:black;
-    margin: 60 60 93 auto;
+    margin: 60px 60px 93px auto;
     text-align: center;
 }
 
