--- a/tictactoe.css
+++ b/tictactoe.css
@@ -36,7 +36,7 @@ body {
 
      background-color:white;
      width: 160px;
-     margin: 60 60 93 auto;
+     margin: 60px 60px 93px auto;
      text-align: center;
      font-color:black;
 }
